tests/baselines/reference/typeFromPropertyAssignment40(strict=true).errors.txt
typeFromPropertyAssignment40.js(7,1): error TS2454: Variable 'ok' is used before being assigned.


==== typeFromPropertyAssignment40.js (1 errors) ====
    function Outer() {
        var self = this
        self.y = 2
    }
    /** @type {Outer} */
    var ok
    ok.y
    ~~
!!! error TS2454: Variable 'ok' is used before being assigned.
    